--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -15,8 +15,8 @@
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
-    "duct-tape-compiler:compiled-hooks": "duct-tape-compiler --emitQueryDebugComments --schema ./src/__tests__/schema.graphql --src ./src --exclude storeObservation/*FieldPolicy.test.ts --exclude __tests__/hooks.test.tsx",
-    "duct-tape-compiler:noop-hooks": "duct-tape-compiler --emitDocuments=false --schema ./src/__tests__/schema.graphql --src ./src --exclude storeObservation/*FieldPolicy.test.ts --exclude storeObservation/compiledHooks.test.tsx",
+    "duct-tape-compiler:compiled-hooks": "duct-tape-compiler --emitQueryDebugComments --schema ./src/__tests__/schema.graphql --src ./src --exclude storeObservation/__tests__/*FieldPolicy.test.ts --exclude __tests__/hooks.test.tsx",
+    "duct-tape-compiler:noop-hooks": "duct-tape-compiler --emitDocuments=false --schema ./src/__tests__/schema.graphql --src ./src --exclude storeObservation/__tests__/*FieldPolicy.test.ts --exclude storeObservation/__tests__/compiledHooks.test.tsx",
     "duct-tape-compiler": "yarn duct-tape-compiler:compiled-hooks && yarn duct-tape-compiler:noop-hooks"
   },
   "devDependencies": {
