--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,14 @@
     "node": true
   },
   "ignorePatterns": ["**/coverage", "**/lib", "**/temp", "**/__generated__"],
-  "plugins": ["prettier"],
+  "plugins": ["check-file", "prettier"],
   "rules": {
+    "check-file/folder-match-with-fex": [
+      "error",
+      {
+        "*.test.{js,jsx,ts,tsx}": "**/__tests__/"
+      }
+    ],
     "prettier/prettier": "error"
   },
   "extends": ["plugin:prettier/recommended"]
