--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/parser": "^5.10.0",
     "esbuild": "^0.17.12",
     "eslint": "^8.7.0",
+    "eslint-plugin-check-file": "^2.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "fast-glob": "^3.2.5",
