--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@babel/runtime": "^7.12.0",
-    "@graphitation/apollo-react-relay-duct-tape": "^1.0.1-alpha.8",
-    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.0.0-alpha.1",
+    "@graphitation/apollo-react-relay-duct-tape": "^1.0.1",
+    "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.0.0-alpha.2",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphitation/supermassive": "^2.4.2",
     "@graphitation/ts-transform-graphql-js-tag": "^1.0.1",
