--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -33,7 +33,7 @@
     }
   },
   "dependencies": {
-    "graphql": "^15.6.1",
+    "graphql": "^17.0.0-alpha.2",
     "typescript": "^4.4.3 <4.5.0"
   }
 }
