--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -21,7 +21,7 @@
     "@graphitation/graphql-js-tag": "*",
     "@graphitation/supermassive-extractors": "*",
     "@graphitation/cli": "*",
-    "@graphql-tools/schema": "^7.1.5",
+    "@graphql-tools/schema": "^10.0.0",
     "@ts-morph/bootstrap": "^0.11.0",
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^26.0.22",
@@ -47,6 +47,6 @@
     }
   },
   "dependencies": {
-    "graphql": "^15.6.1"
+    "graphql": "^17.0.0-alpha.2"
   }
 }
