--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,11 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "ignorePatterns": ["**/coverage", "**/lib", "**/temp", "**/__generated__"],
-  "plugins": ["check-file", "prettier"],
+  "plugins": ["check-file", "prettier", "jest"],
   "rules": {
     "check-file/folder-match-with-fex": [
       "error",
