--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,12 +8,13 @@
     "monorepo-scripts": "bin/monorepo-scripts.js"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "esbuild": "^0.17.12",
-    "eslint": "^8.7.0",
-    "eslint-plugin-check-file": "^2.3.0",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-check-file": "^2.3.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.0.0",
     "fast-glob": "^3.2.5",
     "jest": "^29.3.1",
