--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "scripts": {
     "clean": "git clean -fdx -e node_modules",
-    "build-only": "lage build",
-    "build": "lage build && lage types",
-    "types": "lage types",
-    "test": "lage test",
-    "lint": "lage lint",
+    "build-only": "lage build --continue",
+    "build": "yarn build-only && yarn types",
+    "types": "lage types --continue",
+    "test": "lage test --continue",
+    "lint": "lage lint --continue",
     "lage": "lage",
     "ci": "yarn lage build types test lint && yarn checkchange",
     "beachball": "beachball -b origin/main",
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "beachball": "^2.20.0",
-    "lage": "0.29.1",
+    "lage": "^2.7.1",
     "patch-package": "^6.4.7",
     "prettier": "^2.8.7",
     "ts-jest": "^29.0.5"
