--- a/packages/rempl-apollo-devtools/.eslintrc.json
+++ b/packages/rempl-apollo-devtools/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["../../.eslintrc.json"],
-  "root": true
+  "root": true,
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
