--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,10 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
-      { "argsIgnorePattern": "^_" }
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
     ],
     "@typescript-eslint/no-empty-function": "off"
   },
