--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lage": "^2.7.1",
     "patch-package": "^6.4.7",
     "prettier": "^2.8.7",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.0.5",
+    "@graphql-eslint/eslint-plugin": "3.7.0"
   },
   "resolutions": {
     "cross-fetch": "^3.1.5",
