--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.6",
-    "@graphitation/apollo-react-relay-duct-tape": "^1.0.3",
+    "@apollo/client": "3.7.0",
+    "@graphitation/apollo-react-relay-duct-tape": "^1.0.1",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphql-tools/schema": "^9.0.19",
     "graphql": "^15.6.0",
