--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "lage lint --continue",
     "lage": "lage",
     "ci": "yarn lage build types test lint && yarn checkchange",
-    "beachball": "beachball -b origin/main",
+    "beachball": "beachball -b origin/supermassive-v3",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
     "release": "yarn beachball publish -t next",
