I think it's a fix?

--- a/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
@@ -15,7 +15,6 @@
     "just": "monorepo-scripts"
   },
   "devDependencies": {
-    "@graphitation/supermassive": "*",
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@graphql-codegen/visitor-plugin-common": "^1.17.20",
     "@types/jest": "^26.0.22",
@@ -27,8 +26,7 @@
     "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2",
     "@graphql-codegen/visitor-plugin-common": ">= ^1.17.0 < 2",
     "graphql-tag": ">= 2.11.0 < 3",
-    "@graphql-tools/optimize": "^1.0.1",
-    "@graphitation/supermassive": "^2.4.7"
+    "@graphql-tools/optimize": "^1.0.1"
   },
   "sideEffects": false,
   "access": "public",
