--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -40,7 +40,7 @@
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
-    "@graphitation/supermassive": "^2.0.0"
+    "@graphitation/supermassive": "^2.4.7 || ^3.0.0"
   },
   "publishConfig": {
     "main": "./lib/index.js",
