Add test cov for existing source

--- a/packages/embedded-document-artefact-loader/package.json
+++ b/packages/embedded-document-artefact-loader/package.json
@@ -2,7 +2,6 @@
   "name": "@graphitation/embedded-document-artefact-loader",
   "license": "MIT",
   "version": "0.1.0",
-  "main": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
@@ -21,14 +20,23 @@
   },
   "sideEffects": false,
   "access": "public",
+  "exports": {
+    "jest": {
+      "import": "./lib/jest.ts"
+    },
+    "webpack": {
+      "import": "./lib/webpack.ts"
+    }
+  },
   "publishConfig": {
-    "main": "./lib/index",
-    "types": "./lib/index.d.ts",
-    "module": "./lib/index.mjs",
     "exports": {
-      ".": {
-        "import": "./lib/index.mjs",
-        "require": "./lib/index.js"
+      "jest": {
+        "import": "./lib/jest.mjs",
+        "require": "./lib/jest.js"
+      },
+      "webpack": {
+        "import": "./lib/webpack.mjs",
+        "require": "./lib/webpack.js"
       }
     }
   }
