--- a/packages/embedded-document-artefact-loader/package.json
+++ b/packages/embedded-document-artefact-loader/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
+    "@types/loader-runner": "^2.2.4",
+    "loader-runner": "^4.3.0",
     "monorepo-scripts": "*"
   },
   "sideEffects": false,
