--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/apollo-react-relay-duct-tape-compiler",
   "description": "The build tools to cater to @graphitation/apollo-react-relay-duct-tape's needs.",
   "license": "MIT",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "main": "./src/index.ts",
   "bin": {
     "duct-tape-compiler": "./src/cli-cjs.js"
@@ -40,7 +40,7 @@
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
-    "@graphitation/supermassive": "^2.0.0"
+    "@graphitation/supermassive": "^2.4.8"
   },
   "publishConfig": {
     "main": "./lib/index.js",
