--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "*",
+    "@graphitation/supermassive-ast": "*",
     "@graphitation/supermassive-extractors": "*",
     "@graphitation/cli": "*",
     "@graphql-tools/schema": "^9.0.19",
