--- a/packages/supermassive-ast/package.json
+++ b/packages/supermassive-ast/package.json
@@ -6,7 +6,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
-    "directory": "packages/template"
+    "directory": "packages/supermassive-ast"
   },
   "scripts": {
     "build": "monorepo-scripts build",
