--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -47,6 +47,7 @@
     }
   },
   "dependencies": {
+    "@graphitation/supermassive-ast": "*",
     "@graphql-tools/schema": "^9.0.19",
     "commander": "^8.3.0",
     "graphql": "^15.6.1",
