--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -7,7 +7,7 @@
     "outDir": "lib",
     "jsx": "react",
     "paths": {
-      "graphql": ["./packages/supermassive/node_modules/graphql"]
+      "graphql": ["./node_modules/graphql"]
     }
   },
   "include": ["src"],
