--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "esModuleInterop": true,
     "paths": {
       "@graphql-tools/utils": ["./node_modules/@graphql-tools/utils"],
-      "graphql": ["./packages/supermassive/node_modules/graphql"]
+      "graphql": ["./node_modules/graphql"]
     }
   }
 }
