--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -5,10 +5,7 @@
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
     "outDir": "lib",
-    "jsx": "react",
-    "paths": {
-      "graphql": ["./node_modules/graphql"]
-    }
+    "jsx": "react"
   },
   "include": ["src"],
   "references": [
