--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "release": "yarn beachball publish -t next",
     "postinstall": "patch-package"
   },
-  "dependencies": {
-    "graphql": "^17.0.0-alpha.2"
-  },
   "devDependencies": {
+    "graphql": "^15.0.0",
     "beachball": "^2.20.0",
     "lage": "^2.7.1",
     "patch-package": "^6.4.7",
