--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -47,7 +47,6 @@
     }
   },
   "dependencies": {
-    "graphql": "^17.0.0-alpha.2",
-    "@graphitation/supermassive-ast": "*"
+    "graphql": "^17.0.0-alpha.2"
   }
 }
