--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.0",
-    "@graphitation/supermassive-ast": "2.0.0",
+    "@graphitation/supermassive-ast": "*",
     "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.22",
     "@types/relay-compiler": "^8.0.0",
