--- a/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-typed-document-node-plugin/package.json
@@ -15,7 +15,7 @@
     "just": "monorepo-scripts"
   },
   "devDependencies": {
-    "@graphitation/supermassive-ast": "2.0.0",
+    "@graphitation/supermassive-ast": "*",
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@graphql-codegen/visitor-plugin-common": "^1.17.20",
     "@types/jest": "^26.0.22",
