--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -33,7 +33,10 @@
     }
   },
   "dependencies": {
-    "graphql": "^17.0.0-alpha.2",
+    "graphql": "^15.0.0",
     "typescript": "^4.4.3 <4.5.0"
+  },
+  "peerDependencies": {
+    "graphql": "^15.0.0 || ^16.0.0 || ^17.0.0"
   }
 }
