--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -5,13 +5,13 @@
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
     "outDir": "lib",
-    "jsx": "react"
+    "jsx": "react",
+    "paths": {
+      "@graphql-tools/schema": ["./node_modules/@graphql-tools/schema"],
+      "graphql": ["./node_modules/graphql"]
+    }
   },
   "include": ["src"],
-  "references": [
-    { "path": "../supermassive-ast" },
-    { "path": "../supermassive-extractors" }
-  ],
   "ts-node": {
     "transpileOnly": true,
     "compilerOptions": {
