--- a/packages/apollo-react-relay-duct-tape-compiler/tsconfig.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "commonjs"
   },
   "include": ["src"],
-  "references": [{ "path": "../supermassive-ast" }],
+  "references": [],
   "ts-node": {
     "transpileOnly": true,
     "compilerOptions": {
