--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "patch-package": "^6.4.7",
     "prettier": "^2.8.7",
     "ts-jest": "^29.0.5",
-    "@graphql-eslint/eslint-plugin": "3.7.0"
+    "@graphql-eslint/eslint-plugin": "^3.7.0"
   },
   "resolutions": {
     "cross-fetch": "^3.1.5",
