--- a/packages/supermassive/.eslintrc.json
+++ b/packages/supermassive/.eslintrc.json
@@ -1,23 +1,3 @@
 {
-  "extends": [
-    "../../.eslintrc.json",
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "rules": {
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      { "argsIgnorePattern": "^_" }
-    ]
-  },
-  "overrides": [
-    {
-      "files": ["**/__tests__/**"],
-      "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
-      }
-    }
-  ],
-  "root": true
+  "extends": ["../../.eslintrc.json"]
 }
