--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,13 @@
   },
   "ignorePatterns": ["**/coverage", "**/lib", "**/temp", "**/__generated__"],
   "plugins": ["check-file", "prettier", "jest", "@typescript-eslint"],
+
+  "extends": [
+    "plugin:prettier/recommended",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+
   "rules": {
     "check-file/folder-match-with-fex": [
       "error",
