--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -50,7 +50,7 @@
     "graphql-relay": "^0.10.0",
     "ts-loader": "9.3.1",
     "ts-node": "^10.2.1",
-    "typescript": "4.7.4",
+    "typescript": "^4.9.5",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
