--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -28,7 +28,6 @@
     "react-dom": "^17.0.2",
     "ts-loader": "^9.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.6.2",
     "uuid": "^8.3.2",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.6.0",
@@ -59,6 +58,7 @@
     "@types/uuid": "^8.3.1",
     "graphql-let": "^0.18.5",
     "prettier": "^2.8.7",
-    "@graphql-tools/webpack-loader": "7.0.0"
+    "@graphql-tools/webpack-loader": "7.0.0",
+    "typescript": "^4.9.5"
   }
 }
