--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -24,7 +24,7 @@
     "@graphql-tools/optimize": "^1.1.1",
     "relay-compiler": "^12.0.0",
     "relay-compiler-language-typescript": "^15.0.1",
-    "typescript": "^4.5.0, <4.8.0"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.0",
