--- a/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
@@ -17,14 +17,15 @@
   "devDependencies": {
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@types/jest": "^26.0.22",
-    "monorepo-scripts": "*"
+    "monorepo-scripts": "*",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2"
+    "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2",
+    "typescript": "^4.3.0"
   },
   "dependencies": {
     "@graphitation/supermassive-extractors": "^2.1.0",
-    "typescript": "^4.4.3 <4.5.0",
     "graphql": "^15.0.0"
   },
   "sideEffects": false,
