--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
+    "typescript": "^4.9.5",
     "monorepo-scripts": "*"
   },
   "sideEffects": false,
@@ -33,7 +34,9 @@
     }
   },
   "dependencies": {
-    "graphql": "^15.6.1",
-    "typescript": "^4.4.3 <4.5.0"
+    "graphql": "^15.6.1"
+  },
+  "peerDependencies": {
+    "typescript": "^4.3.5"
   }
 }
