--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -31,7 +31,8 @@
     "iterall": "^1.3.0",
     "monorepo-scripts": "*",
     "node-json-db": "^1.3.0",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.9.5"
   },
   "sideEffects": false,
   "access": "public",
@@ -48,9 +49,6 @@
   },
   "dependencies": {
     "@graphitation/supermassive-ast": "*",
-    "@graphql-tools/schema": "^9.0.19",
-    "commander": "^8.3.0",
-    "graphql": "^15.6.1",
-    "typescript": "^4.4.3 <4.5.0"
+    "graphql": "^15.6.1"
   }
 }
