--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -23,7 +23,7 @@
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphql-tools/optimize": "^1.1.1",
     "relay-compiler": "^12.0.0",
-    "relay-compiler-language-typescript": "^15.0.1",
+    "relay-compiler-language-typescript": "^15.0.1"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.0",
