--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -23,8 +23,7 @@
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphql-tools/optimize": "^1.1.1",
     "relay-compiler": "^12.0.0",
-    "relay-compiler-language-typescript": "^15.0.1",
-    "typescript": "^4.5.0, <4.8.0"
+    "relay-compiler-language-typescript": "^15.0.1"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.0",
@@ -37,11 +36,13 @@
     "monorepo-scripts": "*",
     "relay-test-utils": "^12.0.0",
     "relay-test-utils-internal": "^12.0.0",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
-    "@graphitation/supermassive-ast": "^2.0.0"
+    "@graphitation/supermassive-ast": "^2.0.0",
+    "typescript": "^4.3.5"
   },
   "publishConfig": {
     "main": "./lib/index.js",
