--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "3.7.0",
+    "@apollo/client": "^3.5.6",
     "@graphitation/apollo-react-relay-duct-tape": "^1.0.4",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@graphql-tools/schema": "^9.0.19",
