--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -33,9 +33,10 @@
       }
     }
   },
+  "dependencies": {
+    "graphql": "^15.6.1"
+  },
   "peerDependencies": {
-    "graphql": "^15.0.0 || ^16.0.0 || ^17.0.0",
     "typescript": "^4.3.5"
-
   }
 }
