--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -12,7 +12,7 @@
     "duct-tape-compiler": "duct-tape-compiler --schema ./src/schema/typeDefs.graphql --src ./src --emitDocuments=false"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.15",
+    "@apollo/client": "~3.6.0",
     "@babel/runtime": "^7.12.0",
     "@graphitation/apollo-react-relay-duct-tape": "^1.0.4",
     "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.2.0",
