Webpack and jest now have line source-map support, but coluns are still lacking

--- a/packages/embedded-document-artefact-loader/package.json
+++ b/packages/embedded-document-artefact-loader/package.json
@@ -14,6 +14,9 @@
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
+  "dependencies": {
+    "source-map-js": "^1.0.2"
+  },
   "peerDependencies": {
     "ts-jest": "*"
   },
