--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.2.0",
+    "@graphitation/embedded-document-artefact-loader": "^0.5.0",
     "@graphql-codegen/cli": "2.2.0",
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-resolvers": "^2.2.1",
