Move graphql-js to peer deps

--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^26.0.22",
     "@types/node-json-db": "^0.9.3",
     "benchmark": "^2.1.4",
+    "graphql": "17.0.0-alpha.2",
     "graphql-jit": "^0.8.4",
     "iterall": "^1.3.0",
     "monorepo-scripts": "*",
@@ -45,7 +46,8 @@
       }
     }
   },
-  "dependencies": {
-    "graphql": "^17.0.0-alpha.2"
+  "dependencies": {},
+  "peerDependencies": {
+    "graphql": "^15.0.0 || ^16.0.0 || ^17.0.0"
   }
 }
