--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -48,6 +48,6 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "graphql": "^15.0.0 || ^16.0.0 || ^17.0.0"
+    "graphql": "^17.0.0"
   }
 }
