--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/supermassive",
   "license": "MIT",
-  "version": "3.0.0-alpha.1",
+  "version": "3.0.0-alpha.2",
   "main": "./src/index.ts",
   "repository": {
     "type": "git",
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
-    "test": "yarn extract-schema && monorepo-scripts test",
-    "types": "yarn extract-schema && monorepo-scripts types",
+    "test": "monorepo-scripts test",
+    "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
     "extract-schema": "yarn build && ts-node --project tsconfig.json ./node_modules/.bin/supermassive extract-schema ./src/benchmarks/swapi-schema/schema.graphql",
     "benchmark": "ts-node -T ./src/benchmarks/index.ts"
@@ -25,7 +25,8 @@
     "@types/jest": "^26.0.22",
     "@types/node-json-db": "^0.9.3",
     "benchmark": "^2.1.4",
-    "graphql-jit": "^0.5.1",
+    "graphql": "17.0.0-alpha.2",
+    "graphql-jit": "^0.8.4",
     "iterall": "^1.3.0",
     "monorepo-scripts": "*",
     "node-json-db": "^1.3.0",
@@ -45,7 +46,8 @@
       }
     }
   },
-  "dependencies": {
-    "graphql": "^17.0.0-alpha.2"
+  "dependencies": {},
+  "peerDependencies": {
+    "graphql": "^17.0.0"
   }
 }
