Reenable pre-releases

--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -2,6 +2,7 @@ pr: none
 trigger:
   - main
   - supermassive-v3
+  - alloy/relay-apollo-duct-tape
 
 variables:
   - group: InfoSec-SecurityResults
