--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -48,10 +48,12 @@
     "main": "./lib/index.js",
     "access": "public",
     "module": "./lib/index.mjs",
+    "types": "./lib/index.d.ts",
     "exports": {
       ".": {
         "import": "./lib/index.mjs",
-        "require": "./lib/index.js"
+        "require": "./lib/index.js",
+        "types": "./lib/index.d.ts"
       }
     },
     "bin": {
