--- a/packages/apollo-mock-client/package.json
+++ b/packages/apollo-mock-client/package.json
@@ -44,7 +44,8 @@
     "exports": {
       ".": {
         "import": "./lib/index.mjs",
-        "require": "./lib/index.js"
+        "require": "./lib/index.js",
+				"types": "./lib/index.d.ts"
       }
     }
   }
