--- a/packages/graphql-codegen-typescript-typemap-plugin/package.json
+++ b/packages/graphql-codegen-typescript-typemap-plugin/package.json
@@ -35,7 +35,8 @@
     "exports": {
       ".": {
         "import": "./lib/index.mjs",
-        "require": "./lib/index.js"
+        "require": "./lib/index.js",
+        "types": "./lib/index.d.ts"
       }
     }
   }
