--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -11,21 +11,19 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
-    "test": "monorepo-scripts test",
-    "types": "monorepo-scripts types",
+    "test": "yarn graphql17 && monorepo-scripts test",
+    "types": "yarn graphql17 && monorepo-scripts types",
     "just": "monorepo-scripts",
-    "extract-schema": "yarn build && ts-node --project tsconfig.json ./node_modules/.bin/supermassive extract-schema ./src/benchmarks/swapi-schema/schema.graphql",
+    "graphql17": "node ./scripts/install-graphql-17.js",
     "benchmark": "ts-node -T ./src/benchmarks/index.ts"
   },
   "devDependencies": {
-    "@graphitation/supermassive-extractors": "*",
     "@graphitation/cli": "*",
     "@ts-morph/bootstrap": "^0.11.0",
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^26.0.22",
     "@types/node-json-db": "^0.9.3",
     "benchmark": "^2.1.4",
-    "graphql": "17.0.0-alpha.2",
     "graphql-jit": "^0.8.4",
     "iterall": "^1.3.0",
     "monorepo-scripts": "*",
@@ -48,6 +46,6 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "graphql": "^17.0.0"
+    "graphql": "^15.0.0 || ^16.0.0 || ^17.0.0"
   }
 }
