--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -13,6 +13,7 @@
     }
   },
   "include": ["src"],
+  "exclude": ["**/*.graphql17.test.ts"],
   "ts-node": {
     "transpileOnly": true,
     "compilerOptions": {
