Lint fixes post merge

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
         "varsIgnorePattern": "^_"
       }
     ],
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "no-prototype-builtins": "off"
   },
 
   "overrides": [
