--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -9,5 +9,9 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "references": [{ "path": "../graphql-codegen-relay-ir-plugin" }]
+  "references": [
+    { "path": "../graphql-codegen-relay-ir-plugin" },
+    { "path": "../graphql-codegen-supermassive-typed-document-node-plugin" },
+    { "path": "../graphql-codegen-typescript-operations" }
+  ]
 }
