--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "paths": {
       "@graphql-tools/utils": ["./node_modules/@graphql-tools/utils"],
       "graphql": ["./node_modules/graphql"]
