--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -10,7 +10,7 @@
   },
   "include": ["src"],
   "references": [
-    { "path": "../graphql-codegen-relay-ir-plugin" },
+    // { "path": "../graphql-codegen-relay-ir-plugin" },
     { "path": "../graphql-codegen-supermassive-typed-document-node-plugin" },
     { "path": "../graphql-codegen-typescript-operations" }
   ]
