--- a/packages/rempl-apollo-devtools/package.json
+++ b/packages/rempl-apollo-devtools/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/rempl-apollo-devtools",
   "license": "MIT",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "./dist/apollo-devtools.js",
   "repository": {
     "type": "git",
@@ -20,30 +20,32 @@
   "devDependencies": {
     "@apollo/client": "~3.6.0",
     "@emotion/react": "^11.8.1",
-    "@fluentui/react-components": "^9.0.0-rc.15",
-    "@fluentui/react-data-grid-react-window": "^9.0.0-beta.14",
+    "@fluentui/react-components": "^9.18.9",
+    "@fluentui/react-data-grid-react-window": "^9.0.0-beta.21",
     "@fluentui/react-icons": "2.0.166-rc.3",
-    "@fluentui/react-tabster": "^9.0.0-rc.14",
     "@graphql-tools/schema": "^7.1.5",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-router": "^5.1.18",
+    "@types/react": "^17.0.2",
     "@types/uuid": "^8.3.4",
-    "apollo-inspector": "^1.16.3",
+    "apollo-inspector-ui": "^0.0.3",
+    "apollo-inspector": "^1.17.1",
     "graphiql": "^2.0.9",
     "graphql": "^15.6.1",
     "hotkeys-js": "^3.8.7",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "object-sizeof": "^1.6.1",
-    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.3",
+    "react": "^17.0.2",
     "rempl": "^1.0.0-alpha.24",
+    "rxjs": "^7.8.1",
     "scheduler": "^0.20.2",
+    "use-sync-external-store": "1.2.0",
     "uuid": "^8.3.2",
     "watch": "^1.0.2"
   },
