--- a/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
@@ -17,15 +17,13 @@
   "devDependencies": {
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@types/jest": "^26.0.22",
-    "monorepo-scripts": "*",
-    "typescript": "^4.9.5"
+    "monorepo-scripts": "*"
   },
   "peerDependencies": {
-    "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2",
-    "typescript": "^4.3.0"
+    "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2"
   },
   "dependencies": {
-    "@graphitation/supermassive-extractors": "^2.2.1",
+    "@graphitation/supermassive": "^3.0.0",
     "graphql": "^15.0.0"
   },
   "sideEffects": false,
