--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -23,7 +23,8 @@
     "@graphitation/graphql-js-tag": "^0.9.1",
     "@graphql-tools/optimize": "^1.1.1",
     "relay-compiler": "^12.0.0",
-    "relay-compiler-language-typescript": "^15.0.1"
+    "relay-compiler-language-typescript": "^15.0.1",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.1",
@@ -37,7 +38,8 @@
     "relay-test-utils": "^12.0.0",
     "relay-test-utils-internal": "^12.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@types/yargs": "^17.0.13"
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
