Fix cache piercing

--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -43,6 +43,7 @@ jobs:
           git config user.email "gql-svc@microsoft.com"
           git config user.name "Graphitation Service Account"
           git remote set-url origin https://gql-svc:$(ossGithubPAT)@github.com/microsoft/graphitation.git
+          git fetch --depth=1000000
         displayName: Configure git for release
       - script: yarn release -y -n $(ossNpmToken) --access public
         displayName: Release
