Fix variables for loadMore after refetch in usePaginationFragment (#387)
* repro issue from 1JS for pagination when loadMore doesn't use the right variables after calling refetch

* update todo list to have numbers for an easier debugging

* possible fix to re-use the same variables on next page and exclude pagination specific variables

* Revert "possible fix to re-use the same variables on next page and exclude pagination specific variables"

This reverts commit e59af3266f45c034241e0753308819bb344c8459.

* wrap refetch function from refetchable hook in a separate callback that stores the variables needed for next page

* clean up example code

* Change files

* rename variables and make sure loadMore/Previous uses refetch without variable storing

* add tests for correct variables in load more

---------

Co-authored-by: EUROPE\dragoshomner <dragoshomner@microsoft.com>
Co-authored-by: Stanislaw Wilczynski <Stanislaw.Wilczynski@microsoft.com>
Co-authored-by: Stanisław <sjwilczynski@users.noreply.github.com>
Co-authored-by: Eloy Durán <eloy.de.enige@gmail.com>

--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "yarn generate-resolver-typings && concurrently 'yarn duct-tape-compiler --watch' 'yarn serve'",
+    "start": "yarn generate-resolver-typings && concurrently \"yarn duct-tape-compiler --watch\" \"yarn serve\"",
     "serve": "webpack serve",
     "build": "webpack",
     "duct-tape-compiler": "duct-tape-compiler --schema ./data/schema.graphql --src ./src --emitQueryDebugComments",
