--- a/packages/webpack-loader/package.json
+++ b/packages/webpack-loader/package.json
@@ -16,7 +16,8 @@
     "just": "monorepo-scripts"
   },
   "peerDependencies": {
-    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0"
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
+    "@graphitation/supermassive": "^3.0.0"
   },
   "dependencies": {
     "@graphql-tools/optimize": "^1.1.1",
