--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -58,7 +58,7 @@
     "@types/uuid": "^8.3.1",
     "graphql-let": "^0.18.5",
     "prettier": "^2.8.7",
-    "@graphitation/webpack-loader": "1.0.0",
+    "@graphitation/webpack-loader": "^0.1.0",
     "typescript": "^4.9.5"
   }
 }
