--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "lage": "^2.7.1",
     "patch-package": "^6.4.7",
     "prettier": "^2.8.7",
-    "ts-jest": "^29.0.5",
-    "@graphql-eslint/eslint-plugin": "^3.7.0"
+    "ts-jest": "^29.0.5"
   },
   "resolutions": {
     "cross-fetch": "^3.1.5",
