fix typing generation

--- a/packages/graphql-eslint-rules/tsconfig.json
+++ b/packages/graphql-eslint-rules/tsconfig.json
@@ -6,6 +6,9 @@
     "rootDir": "src",
     "outDir": "lib"
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "./types/kind-override.d.ts"
+  ],
   "references": []
 }
