--- a/packages/graphql-eslint-rules/package.json
+++ b/packages/graphql-eslint-rules/package.json
@@ -21,14 +21,15 @@
     "@types/lodash.camelcase": "^4.3.6",
     "@types/lodash.kebabcase": "^4.1.6",
     "graphql": "^15.0.0",
+    "json-schema-to-ts": "2.9.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.kebabcase": "^4.1.1",
     "monorepo-scripts": "*"
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
-    "lodash.kebabcase": "^4.1.1",
-    "lodash.camelcase": "^4.3.0"
+    "lodash.camelcase": "^4.3.0",
+    "lodash.kebabcase": "^4.1.1"
   },
   "publishConfig": {
     "main": "./lib/index",
