--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -1,3 +1,9 @@
+resources:
+  repositories:
+    - repository: SkypeSpaces-Infra
+      type: git
+      name: SkypeSpaces-Infra
+
 pr: none
 trigger:
   - main
