--- a/.azure-devops/steps/compliance-steps.yml
+++ b/.azure-devops/steps/compliance-steps.yml
@@ -19,8 +19,7 @@ steps:
     condition: succeededOrFailed()
     displayName: "🧭 Run ESLint"
 
-  - template: azure-devops-templates/steps/ESRP-CodeSigning-400.yml&version=GBmaster
-    displayName: "🧭 ESRP CodeSigning 400"
+  - template: azure-devops-templates/steps/ESRP-CodeSigning-400.ym
     parameters:
       workingDirectory: $(System.DefaultWorkingDirectory)
       pattern: "*.ps1"
