--- a/.azure-devops/steps/compliance-steps.yml
+++ b/.azure-devops/steps/compliance-steps.yml
@@ -19,10 +19,38 @@ steps:
     condition: succeededOrFailed()
     displayName: "🧭 Run ESLint"
 
-  - template: azure-devops-templates/steps/ESRP-CodeSigning-400.ym
-    parameters:
-      workingDirectory: $(System.DefaultWorkingDirectory)
-      pattern: "*.ps1"
+- task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@1
+  displayName: ESRP CodeSigning 400
+  inputs:
+    ConnectedServiceName: Teams ESRP CodeSign v3
+    FolderPath: $(System.DefaultWorkingDirectory)
+    Pattern: "impossible.pattern.that.we.dont.have"
+    signConfigType: inlineSignParams
+    inlineOperation: |
+      [
+        {
+          "KeyCode" : "CP-230012",
+          "OperationCode" : "SigntoolSign",
+          "Parameters" : {
+            "OpusName" : "Microsoft",
+            "OpusInfo" : "http://www.microsoft.com",
+            "FileDigest" : "/fd \"SHA256\"",
+            "PageHash" : "/NPH",
+            "TimeStamp" : "/tr \"http://rfc3161.gtm.corp.microsoft.com/TSS/HttpTspServer\" /td sha256"
+          },
+          "ToolName" : "sign",
+          "ToolVersion" : "1.0"
+        },
+        {
+          "KeyCode" : "CP-230012",
+          "OperationCode" : "SigntoolVerify",
+          "Parameters" : {},
+          "ToolName" : "sign",
+          "ToolVersion" : "1.0"
+        }
+      ]
+    SessionTimeout: 60
+    VerboseLogin: false
 
   - task: securedevelopmentteam.vss-secure-development-tools.build-task-publishsecurityanalysislogs.PublishSecurityAnalysisLogs@3
     displayName: "🧭 Publish Guardian Artifacts - All Tools"
