--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -30,6 +30,7 @@
     "graphql": "^15.0.0",
     "monorepo-scripts": "*",
     "react": "^17.0.2",
+    "relay-hooks": "9.0.0",
     "@graphitation/apollo-react-relay-duct-tape-compiler": "^1.5.1",
     "ts-expect": "^1.3.0"
   },
