--- a/packages/ts-transform-graphql-js-tag/package.json
+++ b/packages/ts-transform-graphql-js-tag/package.json
@@ -21,7 +21,7 @@
     "graphql": "^15.6.1",
     "monorepo-scripts": "*",
     "ts-transformer-testing-library": "^1.0.0-alpha.7",
-    "typescript": "5.5.3"
+    "typescript": "^5.5.0"
   },
   "publishConfig": {
     "main": "./lib/index",
@@ -38,6 +38,6 @@
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
-    "typescript": "^5.5.3"
+    "typescript": "^4.3.5 || ^5.0.0"
   }
 }
