--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -59,6 +59,6 @@
     "graphql-let": "^0.18.5",
     "prettier": "^2.8.7",
     "@graphitation/webpack-loader": "^1.0.5",
-    "typescript": "^5.5.0"
+    "typescript": "5.5.2"
   }
 }
