--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
-    "typescript": "^5.5.0",
+    "typescript": "5.5.2",
     "monorepo-scripts": "*"
   },
   "sideEffects": false,
@@ -38,6 +38,6 @@
     "graphql": "^15.6.1"
   },
   "peerDependencies": {
-    "typescript": "^4.3.5 || ^5.0.0"
+    "typescript": "^5.0.0"
   }
 }
