--- a/scripts/package.json
+++ b/scripts/package.json
@@ -21,6 +21,6 @@
     "just-scripts": "^1.5.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^9.1.1",
-    "typescript": "^5.5.0"
+    "typescript": "5.5.2"
   }
 }
