--- a/website/package.json
+++ b/website/package.json
@@ -27,7 +27,7 @@
     "@docusaurus/module-type-aliases": "^2.4.0",
     "@docusaurus/theme-mermaid": "^2.4.0",
     "@tsconfig/docusaurus": "^1.0.7",
-    "typescript": "^5.5.0"
+    "typescript": "5.5.2"
   },
   "resolutions": {
     "cross-fetch": "^3.1.5",
