--- a/packages/apollo-react-relay-duct-tape-compiler/package.json
+++ b/packages/apollo-react-relay-duct-tape-compiler/package.json
@@ -38,7 +38,7 @@
     "relay-test-utils": "^12.0.0",
     "relay-test-utils-internal": "^12.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "5.5.2",
+    "typescript": "^5.5.3",
     "@types/yargs": "^17.0.13"
   },
   "peerDependencies": {
