--- a/packages/graphql-codegen-resolvers-models/package.json
+++ b/packages/graphql-codegen-resolvers-models/package.json
@@ -19,7 +19,7 @@
     "@graphql-codegen/plugin-helpers": "^1.18.2",
     "@graphql-codegen/visitor-plugin-common": "^1.17.20",
     "@types/jest": "^26.0.22",
-    "typescript": "5.5.2",
+    "typescript": "^5.5.3",
     "monorepo-scripts": "*"
   },
   "peerDependencies": {
