--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
-    "typescript": "5.5.2",
+    "typescript": "^5.5.3",
     "monorepo-scripts": "*"
   },
   "sideEffects": false,
