--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -31,7 +31,7 @@
     "monorepo-scripts": "*",
     "node-json-db": "^1.3.0",
     "ts-node": "^10.0.0",
-    "typescript": "5.5.2"
+    "typescript": "^5.5.3"
   },
   "sideEffects": false,
   "access": "public",
