--- a/scripts/package.json
+++ b/scripts/package.json
@@ -19,8 +19,8 @@
     "fast-glob": "^3.2.5",
     "jest": "^29.3.1",
     "just-scripts": "^1.5.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.2.0",
     "ts-node": "^9.1.1",
-    "typescript": "5.5.2"
+    "typescript": "^5.5.3"
   }
 }
