use esbuild for building

--- a/packages/apollo-forest-run/package.json
+++ b/packages/apollo-forest-run/package.json
@@ -21,7 +21,7 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
     "test": "yarn test:own & yarn test:apollo",
     "test:own": "monorepo-scripts test",
