fix eslint types

--- a/packages/graphql-eslint-rules/tsconfig.json
+++ b/packages/graphql-eslint-rules/tsconfig.json
@@ -6,9 +6,6 @@
     "rootDir": "src",
     "outDir": "lib"
   },
-  "include": [
-    "src",
-    "./types/kind-override.d.ts"
-  ],
+  "include": ["src"],
   "references": []
 }
